# prob_prime

./: Cargo.toml  README.md  index.md
src/: lib.rs  pseudoprime.rs
